# test-glove

./: .gitignore  CMakeLists.txt  main.cpp
SenseGloveAPI/SenseCom/Linux/SenseCom_Data/: resources.assets.resS
includes/: DataCaptureApp.h  GloveData.h  RealSense.h  Resources.h  capture_pointcloud.h  region_growing_rgb_segmentation.h
src/: DataCaptureApp.cpp  GloveData.cpp  RealSense.cpp  capture_pointcloud.cpp  region_growing_rgb_segmentation.cpp  test.cpp
